# cppcmathquant

./: .gitignore  CMakeLists.txt  CMakePresets.json  _c_cpp_langwork_.cpp  _c_cpp_langwork_.h  _interim_probes__.cpp  cppcmathquant.cpp  cppcmathquant.h  vcpkg.json
source/: general_problems_main_.cpp  selector_binary_classifier_neuron_.cpp
source/oopstruct/: oopstruct.cpp
